add product and filter by lending institution
